--- a/stevens-college/index.html
+++ b/stevens-college/index.html
@@ -1,14 +1,18 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Computer Software Engineering Technology]
-
-
-Computer Software Engineering Technology
-
-[Image https://via.placeholder.com/500x300]
-
-Schedule
-Faculty
-Tool List
-
-Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Stevens College</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Computer Software Engineering Technology</h1>
+    <img src="https://via.placeholder.com/500x300" alt="CSET video" />
+    <div>
+  <a href="#" class="button">Schedule</a>
+  <a href="#" class="button">Faculty</a>
+  <a href="#" class="button">Tool List</a>
+    </div>
+    <p>Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.</p>
+  </body>
+</html>
