--- a/instagram/index.html
+++ b/instagram/index.html
@@ -6,7 +6,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div>
+     <div class="page-container">
+      <div class ="page">
+     <div class="sidebar">
     <p>About</p>
     <a href="#" class="button">Company</a>
     <a href="#" class="button">Press</a>
@@ -17,6 +19,7 @@
     <a href="#" class="button">Platform</a>
     <a href="#" class="button">Libraries</a>
     </div>
+    <div class="about">
     <h1>About Us</h1>
     <h2>The Team</h2>
     <h3>Kevin Systrom (CEO, co-founder)</h3>
@@ -26,5 +29,8 @@
     <h3>Mike Krieger (CTO, co-founder)</h3>
     <p class="above"><strong>Mike Krieger</strong>(<a href="#">@mikeyk</a>) is the CTO and co-founder of Instagram, a global community of more than 1 billion. As the head of engineering, Mike focuses on building products that bring out the creativity in all of us.</p>
     <p class="above">A native of São Paulo, Brazil, Mike holds an MS in Symbolic Systems from Stanford University. Prior to founding Instagram, he worked at Meebo as a user experience designer and front-end engineer.</p>
+    </div>
+    </div>
+    </div>
   </body>
 </html>
