--- a/airbnb/index.html
+++ b/airbnb/index.html
@@ -1,28 +1,45 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Airbnb]
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Airbnb</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <h1>Book unique homes and experiences.</h1>
+    <div class="check">
+  <form action="/action_page.php">
+    <label for="place">WHERE</label>
+    <input type="text" id="place" name="Where" placeholder="Anywhere">
 
+    <form action="/action_page.php">
+    <label for="Staying">CHECK IN</label><br>
+    <input type="text" id="Staying" name="Check in" placeholder="mm/dd/yyyy">
 
-Book unique homes and experiences.
+    <form action="/action_page.php">
+    <label for="leaving">CHECK OUT</label>
+    <input type="text" id="Leaving" name="Check out" placeholder="mm/dd/yyyy">
 
-
-Where
-[Text Input]
-
-Check In
-[Date Input]
-
-Check Out
-[Date Input]
-
-Guests
-[Number Input]
-
-Search
-[Submit Input]
-
-
-Explore Airbnb
-Homes
-Experiences
-Restaurants
-
+     <form action="/action_page.php">
+    <label for="people">GUESTS</label><br>
+    <input type="number" id="people" name="guests" placeholder="1 guest" min="1" max="6">
+    <input type="submit" value="Search">
+    </form>
+    </div>
+    <h2>Explore Airbnb</h2>
+    <div class="next">
+    <img src="https://via.placeholder.com/100x100" alt="Pictures of rooms" />
+    </div>
+    <p class="picture">Homes</p>
+    <div class="next">
+    <img src="https://via.placeholder.com/100x100" alt="Pictures of peoples experiences" />
+    </div>
+    <p class="picture">Experiences</p>
+    <div class="next">
+    <img src="https://via.placeholder.com/100x100" alt="Pictures of restaurants" />
+    </div>
+    <p class="picture">Restaurants</p>
+  </body>
+</html>
