--- a/amazon/index.html
+++ b/amazon/index.html
@@ -1,35 +1,47 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Amazon]
-
-
-Computer & Technology Books
-
-Browse a wide selection of programming guides, Android resources, and Java books.
-
-
-Shop by category
-
-[Image https://via.placeholder.com/125x175]
-Programming
-
-[Image https://via.placeholder.com/125x175]
-Computer Science
-
-[Image https://via.placeholder.com/125x175]
-Programming Languages
-
-[Image https://via.placeholder.com/125x175]
-Network & Cloud Computing
-
-[Image https://via.placeholder.com/125x175]
-Security & Encryption
-
-[Image https://via.placeholder.com/125x175]
-Software
-
-[Image https://via.placeholder.com/125x175]
-Operating Systems
-
-[Image https://via.placeholder.com/125x175]
-Games & Strategy Guides
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Amazon</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <h1>Computer & Technology Books</h1>
+    <p>Browse a wide selection of <a href="#">programming guides</a>, <a href="#">Android resources</a>, and <a href="#">Java books</a>.</p>
+    <script src="script.js"></script>
+    <h2>Shop by category</h2>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on programming" />
+    <p class="under"><a href="#">Programming</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on computer science" />
+    <p class="under"><a href="#">Computer Science</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on programming languages" />
+    <p class="under"><a href="#">Programming Languages</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on network & cloud computing" />
+    <p class="under"><a href="#">Network & Cloud Computing</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on security & encryption" />
+    <p class="under"><a href="#">Security & Encryption</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on software" />
+    <p class="under"><a href="#">Software</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on operating systems" />
+    <p class="under"><a href="#">Operating Systems</a></p>
+    </div>
+    <div class="item">
+    <img src="https://via.placeholder.com/125x175 alt="Book on games & strategy guides" />
+    <p class="under"><a href="#">Games & Strategy Guides</a></p>
+    </div>
+  </body>
+</html>
