--- a/github/index.html
+++ b/github/index.html
@@ -1,25 +1,42 @@
-<!-- Markup this content with HTML here -->
-[Page Title: GitHub Careers]
-
-
-Come help us make collaboration even better
-
-At GitHub we build tools that make collaborating and writing software easier for everyone. We've built a company we truly love working for, and we think you will too.
-
-
-Open positions
-Apprenticeships
-Internships
-
-
-[Image https://via.placeholder.com/100]
-A diverse and inclusive workplace
-
-At GitHub, we think that a diverse company is a strong company, and we work hard to foster a supportive and welcoming workplace. Learn more about our commitment to diversity and inclusion and see our current demographic data.
-
-
-[Image https://via.placeholder.com/100]
-Work happier
-
-Build amazing things with autonomy, self-direction, and a healthy work-life balance. We offer flexible work schedules for all of our employees and unlimited PTO. We also believe that if a job allows for it, you should work wherever you're happiest.
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>GitHub Careers</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <h1>Come help us make collaboration even better</h1>
+    <p class="center">At GitHub we build tools that make collaborating and writing software easier for everyone. We've built a company we truly love working for, and we think you will too.</p>
+    <div class="position">
+    <a href="#" class="button">Open positions</a>
+    <a href="#" class="button">Apprenticeships</a>
+    <a href="#" class="button">Internships</a>
+    </div>
+    <div class="picture-head">
+    <div class="one">
+    <div class="info">
+    <div class="picture">
+    <img src="https://via.placeholder.com/100x100 alt="CSET video" width="100" height="100"/>
+    </div>
+    <div class="layout">
+    <h2 class="work">A diverse and inclusive workplace</h2>
+    <p class="text">At GitHub, we think that a diverse company is a strong company, and we work hard to foster a supportive and welcoming workplace. Learn more about our commitment to diversity and inclusion and see our <a href="#">current demographic data</a>.</p>
+    </div>
+    </div>
+    </div>
+    <div class="two">
+    <div class="info">
+    <div class="picture">
+    <img src="https://via.placeholder.com/100x100 alt="CSET video" width="100" height="100"/>
+    </div>
+    <div class="layout">
+    <h2>Work happier</h2>
+    <p class="text">Build amazing things with autonomy, self-direction, and a healthy work-life balance. We offer flexible work schedules for all of our employees and unlimited PTO. We also believe that if a job allows for it, you should <a href="#">work wherever you're happiest</a>.</p>
+    </div>
+    </div>
+    </div>
+  </body>
+</html>
