--- a/instagram/index.html
+++ b/instagram/index.html
@@ -9,11 +9,11 @@
      <div class="page-container">
       <div class ="page">
      <div class="sidebar">
-    <p>About</p>
+    <p class="caps">About</p>
     <a href="#" class="button">Company</a>
     <a href="#" class="button">Press</a>
     <a href="#" class="button">Jobs</a>
-    <p>Legal</p>
+    <p class="caps">Legal</p>
     <a href="#" class="button">Terms</a>
     <a href="#" class="button">Privacy</a>
     <a href="#" class="button">Platform</a>
